--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </title>
 
     
-    <link rel="stylesheet" href="scss/hallo.scss">
+    <link rel="stylesheet" href="/css/style.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css" crossorigin="anonymous">
