--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Ashley Ivy Hutson's Personal Data" />
   <meta property="og:description" content="Screw privacy, Here is my data." />
-  <meta property="og:image" content="/images/portrait.jpg" />
+  <meta property="og:image" content="images/portrait.jpg" />
 
   
   <meta name="twitter:card" content="summary_large_image" />
@@ -22,14 +22,14 @@
   <meta property="twitter:url" content="https://www.screwmyprivacy.com" />
   <meta name="twitter:title" content="Ashley Ivy Hutson's Personal Data" />
   <meta name="twitter:description" content="Screw privacy, Here is my data." />
-  <meta name="twitter:image" content="/images/portrait.jpg" />
+  <meta name="twitter:image" content="images/portrait.jpg" />
 
     <title>
             Screw My Privacy
     </title>
 
     
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css" crossorigin="anonymous">
