deploy: 9c6f7cf55ba8dc5c6f1b6a3506335a30f46c1a3b

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     
     
-    <link rel="stylesheet" href="css/styl.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css" crossorigin="anonymous">
