deploy: 5deb5d5dfdd634fb97a2feb37610c896aade8b3b

--- a/index.html
+++ b/index.html
@@ -539,6 +539,8 @@
                 <span class="fab fa-github"></span>
             </a><a rel="me" href="https://hub.docker.com/u/asheliahut" title="Docker Hub">
                 <span class="fab fa-docker"></span>
+            </a><a rel="me" href="https://app.zerion.io/ashelia.eth" title="Zerion">
+                <span class="fab fa-ethereum"></span>
             </a></div>
 </footer></body>
 </html>
