deploy: 5ed1b08e23ea2081a7cffd62201eb66d911d0a02

--- a/index.html
+++ b/index.html
@@ -210,9 +210,8 @@
         </figure>
 
         <span class="design">
-          520 Occidental Avenue <br />
-          Unit 816 <br />
-          Seattle, WA 98104
+          5206 NE 136th Pl <br />
+          Vancouver, WA 98682
         </span>
       </div>
     </div>
