deploy: b25f2843ea302333b637e97162f5f6f10156bb34

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
         <span class="design">
           ❤️❤️❤️ <br />
-          In a relationship <br />
+          Engaged <br />
           ❤️❤️❤️
         </span>
       </div>
@@ -185,7 +185,7 @@
 
         <span class="design">
           McGraw Hill Education <br />
-          Title: Principal Software Engineer
+          Title: Cloud Architecht
         </span>
       </div>
     </div>
