deploy: 5a46615e1b8fb47dba40a315d7c4594872ca1f7b

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
         <span class="design">
           ❤️❤️❤️ <br />
-          Engaged <br />
+          Married (Being a Wifey) <br />
           ❤️❤️❤️
         </span>
       </div>
@@ -172,7 +172,7 @@
       <div class="card-front">
         <figure>
           <div class="img-bg"></div>
-          <img src="images/coforma-logo.webp" alt="Coforma LLC" />
+          <img style="margin-top: 4rem; margin-left: -5rem; block-size: 14.5rem;" src="images/coforma-logo.webp" alt="Coforma LLC" />
           <figcaption>Work</figcaption>
         </figure>
       </div>
@@ -180,7 +180,7 @@
       <div class="card-back">
         <figure>
           <div class="img-bg"></div>
-          <img src="images/coforma-logo.webp" alt="Coforma LLC" />
+          <img style="margin-top: 4rem; margin-left: -5rem; block-size: 14.5rem;" isrc="images/coforma-logo.webp" alt="Coforma LLC" />
         </figure>
 
         <span class="design">
