deploy: 2006c9df7b25c1bf540dab12edb28a87ba56cc01

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <div class="card-back">
         <figure>
           <div class="img-bg"></div>
-          <img style="margin-top: 4rem; margin-left: -5rem; block-size: 14.5rem;" isrc="images/coforma-logo.webp" alt="Coforma LLC" />
+          <img style="margin-top: 4rem; margin-left: -5rem; block-size: 14.5rem;" src="images/coforma-logo.webp" alt="Coforma LLC" />
         </figure>
 
         <span class="design">
